<resources>
    <string name="app_name">Coral-ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="result">Result</string>
    <string name="hard_coral">HARD CORAL</string>
    <string name="acropora_brueggemanni">Acropora brueggemanni</string>
    <string name="image_coral">Image Coral</string>
    <string name="expander_indicator">Expander indicator</string>
    <string name="famili">Famili</string>
    <string name="pseudosiderastrea">Pseudosiderastrea</string>
    <string name="image_dna">Image DNA</string>
    <string name="genus">Genus</string>
    <string name="discoverer_and_year">%1$s, %2$s</string>
    <string name="brook_1983">BROOK, 1983</string>
    <string name="scan_coral">Scan Coral</string>
    <string name="camera_suggestion">Place camera to object and keep steady</string>
    <string name="flash_config">Pengaturan Senter</string>
    <string name="storage_desc">Load image from storage</string>
    <string name="image_preview_desc">Show image from local storage</string>
    <string name="capture">Capture</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="process_confirm">Process this image ?</string>
    <string name="karakteristik_amp_warna"><![CDATA[Karakteristik & Warna]]></string>
    <string name="koloni_dengan_percabangan_arboresen_cabang_dengan_satu_atau_dua_axial_koralit_percabangan_tidak_teratur_dan_mendekati_kearah_ujung_membengkak_berbenjol_benjol_tidak_teratur_radial_koralit_membulat_tersebar_rapat_tidak_beraturan_memiliki_warna_coklat_muda_dan_mendekati_ujung_memutih">Koloni dengan percabangan arboresen, cabang dengan satu atau dua axial koralit. Percabangan tidak teratur dan mendekati kearah ujung membengkak, berbenjol-benjol tidak teratur. Radial koralit membulat tersebar rapat tidak beraturan, memiliki warna coklat muda dan mendekati ujung memutih</string>
    <string name="jenis_yang_mirip">Jenis Yang Mirip</string>
    <string name="jenis_ini_mudah_dibedakan_dari_yang_lain_dengan_ciri_khas_adanya_benjolan_benjolan_diujung_dari_percabangan_yang_kadang_kadang_terdiri_dari_dua_axial_koralit">Jenis ini mudah dibedakan dari yang lain dengan ciri khas adanya benjolan-benjolan diujung dari percabangan yang kadang-kadang terdiri dari dua axial koralit.</string>
    <string name="tersebar_di_seluruh_perairan_indonesia_jenis_ini_sangat_umum_dijumpai_di_daerah_tubir">Tersebar di seluruh perairan Indonesia, jenis ini sangat umum dijumpai di daerah tubir.</string>
    <string name="distribusi">Distribusi</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="title_text">Title text</string>
    <string name="desc_text">Description Text</string>
    <string name="illustration">Illustration</string>
    <string name="analyzing">Analyzing...</string>
    <string name="desc_home">Let\'s Explore</string>
    <string name="book">Book</string>
    <string name="detect">Detect</string>
    <string name="corals_book">Coral\'s Book</string>
    <string name="empty_data">Empty Data!!</string>
    <string name="processing">Processing...</string>
    <string name="forum">Forum</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">enter your name</string>
    <string name="version">V1.1.0</string>
    <string name="Info_description">This project was a modified version of Bangkit project named: Coral-ID. In this app, I added new forum feature where the people can sent a new message on the forum. To use the app, the user need to change the source code url to the public server, so the application can make an API request into the server. To authenticate which user sent the message, I create a simple authentication feature (login, register, and logout) using JWT as it\'s token. On the server side, I create JWT token using simple-jwt library that was provided for the Django Rest Framework. The user also need to setup the yolov4 model for analyzing the corals. Here is the link for the source code and also the yolov4 model:\nhttps://github.com/nox237/Coral-ID dan https://drive.google.com/file/d/1pRzzqRgSdvXJPMRFsgw2WzAt2fGhGvcA/view?usp=sharing </string>
    <string name="Info_original">For the original project, you can see on this link below:\nhttps://github.com/sayapakailinuxpak/Coral-ID</string>
    <string name="closing">Hope the project can give you some insights.\nThanks! - Stephen Nicholas</string>
</resources>